refactor: cleaned up arrangement of landing page to more logical structure, changed naming of landing page class names from 'home' to 'landing'

--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
     <!------------------------------- Landing Page ------------------------------->
     <section id="landing">
         <div class="container">
-            <div class="row home">
-                <!-- section container for profile image -->
-                <div class="col-md-6 home-hero-image-div">
-                    <!-- profile image circle div -->
-                    <div class="home-hero-image-circle"></div>
+            <div class="row landing-intro">
+                <div class="col-md-6 landing-intro-visual">
+                    <div class="landing-hero-image-circle"></div>
                 </div>
-                <div class="col-md-6 landing-hero-blurb">
-                    <div class="home-hero-blurb-text">
+                <div class="col-md-6 landing-intro-blurb">
+                    <div class="landing-hero-blurb-text">
                         <h2>Hi! My name is ...</h2>
                         <h1>Stephen Harrold</h1>
                         <p>Junior Full Stack Developer based in Dublin. I am a creative problem solver with a
@@ -65,46 +63,46 @@
                     </div>
                 </div>
             </div>
-            <!-- Big home page navigation buttons that appears only on devices bigger than mobile -->
-            <div class="row">
-                <div class="col-12">
-                    <!-- Contact me small button that appears only on mobile devices-->
-                    <a href="#contact" class="btn btn-steharr-standard" id="home-nav-contact-special-div">Contact Me!<i
-                            class="fas fa-comments home-nav-button-icon"></i></a>
+
+            <div class="row landing-navigation">
+                <div class="col-12 quicklink-contact">
+                    <!-- Contact me  button that appears on mobile devices-->
+                    <a href="#contact" class="btn btn-steharr-standard">Contact
+                        Me! <i class="fas fa-comments"></i></a>
                 </div>
-                <div class="col-md-3 home-nav-button-div">
-                    <div class="home-nav-button-circle">
+                <div class="col-md-3 landing-nav-button-container">
+                    <div class="landing-nav-button-circle">
                         <!-- placeholder-aboutme link -->
-                        <a href="#" class="home-nav-button-object">
-                            <i class="fas fa-book-open home-nav-button-icon"></i>
-                            <h5 class="home-nav-button-text">About</h5>
+                        <a href="#about" class="landing-nav-button-link">
+                            <i class="fas fa-book-open landing-nav-button-icon"></i>
+                            <h5 class="landing-nav-button-text">About</h5>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-3 home-nav-button-div">
-                    <div class="home-nav-button-circle">
+                <div class="col-md-3 landing-nav-button-container">
+                    <div class="landing-nav-button-circle">
                         <!-- placeholder-skills link -->
-                        <a href="#" class="home-nav-button-object">
-                            <i class="fas fa-tools home-nav-button-icon"></i>
-                            <h5 class="home-nav-button-text">Skills</h5>
+                        <a href="#skills" class="landing-nav-button-link">
+                            <i class="fas fa-tools landing-nav-button-icon"></i>
+                            <h5 class="landing-nav-button-text">Skills</h5>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-3 home-nav-button-div">
-                    <div class="home-nav-button-circle">
+                <div class="col-md-3 landing-nav-button-container">
+                    <div class="landing-nav-button-circle">
                         <!-- placeholder-projects link -->
-                        <a href="#" class="home-nav-button-object">
-                            <i class="fas fa-lightbulb home-nav-button-icon"></i>
-                            <h5 class="home-nav-button-text">Projects</h5>
+                        <a href="#projects" class="landing-nav-button-link">
+                            <div class="fas fa-lightbulb landing-nav-button-icon"></div>
+                            <h5 class="landing-nav-button-text">Projects</h5>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-3 home-nav-button-div">
-                    <div class="home-nav-button-circle">
+                <div class="col-md-3 landing-nav-button-container">
+                    <div class="landing-nav-button-circle">
                         <!-- placeholder-contact link -->
-                        <a href="#" class="home-nav-button-object">
-                            <i class="fas fa-comments home-nav-button-icon"></i>
-                            <h5 class="home-nav-button-text">Contact</h5>
+                        <a href="#contact" class="landing-nav-button-link">
+                            <i class="fas fa-comments landing-nav-button-icon"></i>
+                            <h5 class="landing-nav-button-text">Contact</h5>
                         </a>
                     </div>
                 </div>
@@ -116,7 +114,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">About Me <i class="fas fa-book-open home-nav-button-icon"></i></h2>
+                    <h2 class="page-header">About Me <i class="fas fa-book-open landing-nav-button-icon"></i></h2>
                 </div>
             </div>
         </div>
@@ -203,7 +201,7 @@
                                 <p> Currently, I am working on my first Code Institute milestone project. You can find
                                     details of it and much more by jumping to <a href="#projects"
                                         class="btn btn-steharr-standard btn-quicklink-projects" id="">Projects <i
-                                            class="fas fa-lightbulb home-nav-button-icon"></i></a></p>
+                                            class="fas fa-lightbulb landing-nav-button-icon"></i></a></p>
                             </div>
                         </div>
                     </div>
@@ -216,7 +214,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">Skills <i class="fas fa-tools home-nav-button-icon"></i></h2>
+                    <h2 class="page-header">Skills <i class="fas fa-tools landing-nav-button-icon"></i></h2>
                 </div>
             </div>
         </div>
@@ -323,7 +321,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">Projects <i class="fas fa-lightbulb home-nav-button-icon"></i></h2>
+                    <h2 class="page-header">Projects <i class="fas fa-lightbulb landing-nav-button-icon"></i></h2>
                 </div>
             </div>
             <div class="row">
@@ -428,7 +426,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">Contact <i class="fas fa-comments home-nav-button-icon"></i></h2>
+                    <h2 class="page-header">Contact <i class="fas fa-comments landing-nav-button-icon"></i></h2>
                 </div>
             </div>
         </div>
