--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
         crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- ScrollReveal Effect -->
+    <script src="https://unpkg.com/scrollreveal@4"></script>
+    <script>
+        ScrollReveal({ duration: 1000 })
+    </script>
 </head>
 
 <body>
     <!------------------------------- Header ------------------------------->
     <header>
-        <!-- Overhead Navbar (built from bootstrap navbar component)-->
         <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
             <a class="navbar-brand" href="#landing">SteHarr</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -54,9 +58,10 @@
                 </div>
                 <div class="col-md-6 landing-intro-blurb">
                     <div class="landing-hero-blurb-text">
-                        <h2>Hi! My name is ...</h2>
-                        <h1>Stephen Harrold</h1>
-                        <p>Junior Full Stack Developer based in Dublin. I am a creative problem solver with a
+                        <h2 class="typing-demo">Hi! My name is ...</h2>
+                        <h1 class="typing-demo">Stephen Harrold</h1>
+                        <p>Junior Full Stack Developer based in Dublin. I am a creative problem
+                            solver with a
                             talent for making applications. I hope you enjoy browsing my site.
                             <i class="far fa-smile"></i>
                         </p>
@@ -109,6 +114,10 @@
             </div>
         </div>
     </section>
+    <!-- Page seperator -->
+    <div class="container">
+        <hr>
+    </div>
     <!------------------------------- About Me Page ------------------------------->
     <section id="about">
         <div class="container">
@@ -118,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div class="container container-page-content-about">
+        <div class="container">
             <div class="row">
                 <div class="col-md-4 px-0">
                     <div class="about-timeline-visual timeline-dashed-line">
@@ -209,6 +218,10 @@
             </div>
         </div>
     </section>
+    <!-- Page seperator -->
+    <div class="container">
+        <hr>
+    </div>
     <!------------------------------- Skills Page ------------------------------->
     <section id="skills">
         <div class="container">
@@ -218,7 +231,7 @@
                 </div>
             </div>
         </div>
-        <div class="container container-page-content-skills">
+        <div class="container">
             <div class="row">
                 <div class="col-md-8 skills-box-container">
                     <h3 class="skills-box-header">Coding Languages</h3>
@@ -316,6 +329,10 @@
             </div>
         </div>
     </section>
+    <!-- Page seperator -->
+    <div class="container">
+        <hr>
+    </div>
     <!------------------------------- Projects Page ------------------------------->
     <section id="projects">
         <div class="container">
@@ -421,6 +438,10 @@
         </div>
         </div>
     </section>
+    <!-- Page seperator -->
+    <div class="container">
+        <hr>
+    </div>
     <!------------------------------- Contact Page ------------------------------->
     <section id="contact">
         <div class="container">
@@ -430,7 +451,7 @@
                 </div>
             </div>
         </div>
-        <div class="container container-page-content-contact">
+        <div class="container">
             <div class="row">
                 <div class="col-md-4 contact-info-box">
                     <div>
@@ -525,6 +546,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+    <script>
+        ScrollReveal().reveal('.landing-navigation', {
+            delay: 375,
+            duration: 900,
+            reset: true
+        })
+    </script>
 </body>
 
 </html>
