refactor: adjusted projects page code to a more logical structure

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 px-0">
+                <div class="col-xl-4 px-0">
                     <div class="about-timeline-visual timeline-dashed-line">
                         <div class="about-timeline-image study"></div>
                     </div>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 px-0">
+                <div class="col-xl-4 px-0">
                     <div class="about-timeline-visual timeline-dashed-line">
                         <div class="about-timeline-image work"></div>
                     </div>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 px-0">
+                <div class="col-xl-4 px-0">
                     <div class="about-timeline-visual timeline-dashed-line">
                         <div class="about-timeline-image now"></div>
                     </div>
@@ -341,101 +341,138 @@
                     <h2 class="page-header">Projects <i class="fas fa-lightbulb landing-nav-button-icon"></i></h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 projects-container">
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <!-- ******Project Card Start****** -->
                     <div class="card project-card">
-                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                            alt="...">
+                        <div class="project-card-image">
+                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top"
+                                alt="screenshot of the love running website project">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Love Running Website</h5>
                             <p class="card-text">Fictional running group website made while learning HTML and CSS
                             </p>
-                            <div class="tags-container">
-                                <span class="language-content">Languages:</span>
-                                <span class="programming-lang-tag">HTML</span>
-                                <span class="programming-lang-tag">CSS</span>
-                            </div>
-                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                            <p class="card-tags">
+                                Languages:
+                                <span class="programming-lang-tag color-html-orange">HTML</span>
+                                <span class="programming-lang-tag color-css-blue">CSS</span>
+                            </p>
+                        </div>
+                        <div class="container-card-link-github">
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
+                                target="_blank">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
                     </div>
+                    <!-- ******Project Card End****** -->
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <!-- ******Project Card Start****** -->
                     <div class="card project-card">
-                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                            alt="...">
+                        <div class="project-card-image">
+                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top" alt="...">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Whiskey Drop Website</h5>
                             <p class="card-text">Fictional whiskey delivery website made while
                                 learning git and Bootstrap
                             </p>
-                            <div class="tags-container">
-                                <span class="language-content">Languages:</span>
-                                <span class="programming-lang-tag">HTML</span>
-                                <span class="programming-lang-tag">CSS</span>
-                            </div>
-                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                            <p class="card-tags">
+                                Languages:
+                                <span class="programming-lang-tag color-html-orange">HTML</span>
+                                <span class="programming-lang-tag color-css-blue">CSS</span>
+                            </p>
+                        </div>
+                        <div class="container-card-link-github">
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
+                                target="_blank">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
                     </div>
+                    <!-- ******Project Card End****** -->
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <!-- ******Project Card Start****** -->
                     <div class="card project-card">
-                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                            alt="...">
+                        <div class="project-card-image">
+                            <img src="assets/images/project_card_portfolio.png" class="card-img-top" alt="...">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">SteHarr Portfolio Page</h5>
                             <p class="card-text">Personal website to showcase skills, projects & experience
                             </p>
-                            <div class="tags-container">
-                                <span class="language-content">Languages:</span>
-                                <span class="programming-lang-tag">HTML</span>
-                                <span class="programming-lang-tag">CSS</span>
-                                <span class="programming-lang-tag">Javascript</span>
-                            </div>
-                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                            <p class="card-tags">
+                                Languages:
+                                <span class="programming-lang-tag color-html-orange">HTML</span>
+                                <span class="programming-lang-tag color-css-blue">CSS</span>
+                                <span class="programming-lang-tag color-javascript-yellow">Javascript</span>
+                            </p>
+                        </div>
+                        <div class="container-card-link-github">
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
+                                target="_blank">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
                     </div>
+                    <!-- ******Project Card End****** -->
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 projects-container">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <!-- ******Project Card Start****** -->
                     <div class="card project-card">
-                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                            alt="...">
+                        <div class="project-card-image">
+                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top" alt="...">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Process Capture Tool</h5>
                             <p class="card-text">Screen capture tool to enable better task handovers between teammates
                             </p>
-                            <div class="tags-container">
-                                <span class="language-content">Languages:</span>
-                                <span class="programming-lang-tag">Python</span>
-                            </div>
-                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                            <p class="card-tags">
+                                Languages:
+                                <span class="programming-lang-tag color-python-blue">Python</span>
+                            </p>
+                        </div>
+                        <div class="container-card-link-github">
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
+                                target="_blank">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
                     </div>
+                    <!-- ******Project Card End****** -->
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <!-- ******Project Card Start****** -->
                     <div class="card project-card">
-                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                            alt="...">
+                        <div class="project-card-image">
+                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top" alt="...">
+                        </div>
                         <div class="card-body">
-                            <h5 class="card-title">VBA CoAuthoring Add-In</h5>
-                            <p class="card-text">Excel Add-In to enable multiple users to edit shared spreadsheets
+                            <h5 class="card-title">Excel CoAuthoring Add-In</h5>
+                            <p class="card-text">Excel Add-In to enable multiple users to edit spreadsheet saved on a
+                                server
                                 simultaneously
                             </p>
-                            <div class="tags-container">
-                                <span class="language-content">Languages:</span>
-                                <span class="programming-lang-tag">VBA</span>
-                            </div>
-                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                            <p class="card-tags">
+                                Languages:
+                                <span class="programming-lang-tag color-vba-green">VBA</span>
+                            </p>
+                        </div>
+                        <div class="container-card-link-github">
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
+                                target="_blank">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
                     </div>
+                    <!-- ******Project Card End****** -->
                 </div>
             </div>
-        </div>
         </div>
     </section>
     <!-- Page seperator -->
