various small corrections made in line with results from W3C HTML validator

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                     building up my github portfolio with projects I have developed in VBA.</p>
                                 <p> Currently, I am working on my first Code Institute milestone project. You can find
                                     details of it and much more by jumping to <a href="#projects"
-                                        class="btn btn-steharr-standard btn-quicklink-projects" id="">Projects <i
+                                        class="btn btn-steharr-standard btn-quicklink-projects">Projects <i
                                             class="fas fa-lightbulb landing-nav-button-icon"></i></a></p>
                             </div>
                         </div>
@@ -308,22 +308,28 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4 skills-box-container">
-                    <!-- <h3 class="skills-box-header">Expertise</h3> -->
                     <h3 class="skills-box-header">Software Expertise</h3>
                     <ul>
-                        <li><span class="skills-item-tag">Microsoft Office</span></li>
-                        <p class="expertise-description">Extensive experience in task automation in
-                            the
-                            microsoft office suite (using VBA)</p>
-                        <li><span class="skills-item-tag">RPA</span></li>
-                        <p class="expertise-description">Worked on multiple projects to develop UiPath bots</p>
-                        <li><span class="skills-item-tag">SAP ERP</span></li>
-                        <p class="expertise-description">In depth knowledge of SAP for logistics customer
-                            order management</p>
-                        <li><span class="skills-item-tag">CRM</span></li>
-                        <p class="expertise-description">Experienced with Microsoft Dynamics</p>
+                        <li>
+                            <h4 class="skills-item-tag">Microsoft Office</h4>
+                            <p class="expertise-description">Extensive experience in task automation in
+                                the
+                                microsoft office suite (using VBA)</p>
+                        </li>
+                        <li>
+                            <h4 class="skills-item-tag">RPA</h4>
+                            <p class="expertise-description">Worked on multiple projects to develop UiPath bots</p>
+                        </li>
+                        <li>
+                            <h4 class="skills-item-tag">SAP ERP</h4>
+                            <p class="expertise-description">In depth knowledge of SAP for logistics customer
+                                order management</p>
+                        </li>
+                        <li>
+                            <h4 class="skills-item-tag">CRM</h4>
+                            <p class="expertise-description">Experienced with Microsoft Dynamics</p>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -496,7 +502,7 @@
                         <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">Download
                             My CV
                             <i class="fas fa-arrow-alt-circle-down"></i>
-                            </i></a>
+                        </a>
                     </div>
                     <div>
                         <h5>Want to get in touch?</h5>
@@ -513,17 +519,17 @@
                         <form action="https://formdump.codeinstitute.net" method="POST">
                             <div class="contact-form-item">
                                 <label for="fname">First Name</label>
-                                <input class="form-input" type="text" id="fname" name:="first_name" placeholder="John"
+                                <input class="form-input" type="text" id="fname" name="first_name" placeholder="John"
                                     required />
                             </div>
                             <div class="contact-form-item">
                                 <label for="fname">Last Name</label>
-                                <input class="form-input" type="text" id="lname" name:="last_name" placeholder="Doe"
+                                <input class="form-input" type="text" id="lname" name="last_name" placeholder="Doe"
                                     required />
                             </div>
                             <div class="contact-form-item">
                                 <label for="email">Email</label>
-                                <input class="form-input" type="email" id="email" name:="email_address"
+                                <input class="form-input" type="email" id="email" name="email_address"
                                     placeholder="johndoe@gmail.com" required />
                             </div>
                             <div class="contact-form-item">
@@ -568,7 +574,7 @@
             </div>
             <div class="row">
                 <div class="col-12" id="copyright">
-                    <p>&#169 Stephen Harrold 2021</p>
+                    <p>&#169; Stephen Harrold 2021</p>
                 </div>
             </div>
         </div>
