--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
                         <div class="project-card-image">
-                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top"
+                            <img src="assets/images/project_card_loverunning.png" class="card-img-top"
                                 alt="screenshot of the love running website project">
                         </div>
                         <div class="card-body">
@@ -380,7 +380,8 @@
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
                         <div class="project-card-image">
-                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top" alt="...">
+                            <img src="assets/images/project_card_whiskey_drop.PNG" class="card-img-top"
+                                alt="the whiskey drop website logo">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Whiskey Drop Website</h5>
@@ -406,7 +407,8 @@
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
                         <div class="project-card-image">
-                            <img src="assets/images/project_card_portfolio.png" class="card-img-top" alt="...">
+                            <img src="assets/images/project_card_steharrportfolio.png" class="card-img-top"
+                                alt="screenshot of the steharr portfolio website project">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">SteHarr Portfolio Page</h5>
@@ -431,8 +433,12 @@
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
+                        <div class="ribbon-work-in-progress">
+                            <h5>Work In Progress</h5>
+                        </div>
                         <div class="project-card-image">
-                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top" alt="...">
+                            <img src="assets/images/project_card_python_project.png" class="card-img-top"
+                                alt="a default python project logo">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Process Capture Tool</h5>
@@ -455,8 +461,12 @@
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
+                        <div class="ribbon-work-in-progress">
+                            <h5>Work In Progress</h5>
+                        </div>
                         <div class="project-card-image">
-                            <img src="assets/images/project_card_loverunning.PNG" class="card-img-top" alt="...">
+                            <img src="assets/images/project_card_excel_project.png" class="card-img-top"
+                                alt="a default excel vba project logo">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Excel CoAuthoring Add-In</h5>
