--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <!------------------------------- Header ------------------------------->
+    <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
             <a class="navbar-brand" href="#landing">SteHarr</a>
@@ -49,7 +49,7 @@
             </div>
         </nav>
     </header>
-    <!------------------------------- Landing Page ------------------------------->
+    <!-- Landing Page -->
     <section id="landing">
         <div class="container">
             <div class="row landing-intro">
@@ -118,7 +118,7 @@
     <div class="container">
         <hr>
     </div>
-    <!------------------------------- About Me Page ------------------------------->
+    <!-- About Me Page -->
     <section id="about">
         <div class="container">
             <div class="row">
@@ -222,7 +222,7 @@
     <div class="container">
         <hr>
     </div>
-    <!------------------------------- Skills Page ------------------------------->
+    <!-- Skills Page -->
     <section id="skills">
         <div class="container">
             <div class="row">
@@ -339,7 +339,7 @@
     <div class="container">
         <hr>
     </div>
-    <!------------------------------- Projects Page ------------------------------->
+    <!-- Projects Page -->
     <section id="projects">
         <div class="container">
             <div class="row">
@@ -380,7 +380,7 @@
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
                         <div class="project-card-image">
-                            <img src="assets/images/project_card_whiskey_drop.PNG" class="card-img-top"
+                            <img src="assets/images/project_card_whiskey_drop.png" class="card-img-top"
                                 alt="the whiskey drop website logo">
                         </div>
                         <div class="card-body">
@@ -495,7 +495,7 @@
     <div class="container">
         <hr>
     </div>
-    <!------------------------------- Contact Page ------------------------------->
+    <!-- Contact Page -->
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -557,7 +557,7 @@
             </div>
         </div>
     </section>
-    <!------------------------------- Footer ------------------------------->
+    <!-- Footer -->
     <footer>
         <div class="container-fluid">
             <div class="row">
@@ -589,7 +589,7 @@
             </div>
         </div>
     </footer>
-    <!------------------------------- Bootstrap Javascript Links ------------------------------->
+    <!-- Bootstrap Javascript Script -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -599,6 +599,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+    <!-- ScrollReveal Script For Landing Page-->
     <script>
         ScrollReveal().reveal('.landing-navigation', {
             delay: 375,
