--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                                     to programming at this early stage, working with C++ for my computer modules.</p>
                                 <p> For my Masters
                                     thesis, I was assessing the effectiveness of using a crash test software called <a
-                                        href="https://tass.plm.automation.siemens.com/madymo" target="_blank">MADYMO</a>
+                                        href="https://tass.plm.automation.siemens.com/madymo" target="_blank"
+                                        rel="noopener">MADYMO</a>
                                     to
                                     help
                                     diagnose sports concussion injuries. My passion for
@@ -166,7 +167,8 @@
                             <div class="timeline-item-description-text">
                                 <h3 class="timeline-item-heading">Work</h3>
                                 <p>After university, I started work at global semiconductor manufacturer <a
-                                        href="https://www.infineon.com/" target="_blank">Infineon Technologies</a> where
+                                        href="https://www.infineon.com/" target="_blank" rel="noopener">Infineon
+                                        Technologies</a> where
                                     I
                                     work
                                     today. My role is as a supply chain
@@ -197,7 +199,7 @@
                                     to
                                     pursue a
                                     career in development. I enrolled in <a href="https://codeinstitute.net/"
-                                        target="_blank">
+                                        target="_blank" rel="noopener">
                                         Code Insititute's</a> Full Stack Software Development Diploma and am currently
                                     doing
                                     the
@@ -369,7 +371,7 @@
                         </div>
                         <div class="container-card-link-github">
                             <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
-                                target="_blank">View
+                                target="_blank" rel="noopener">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
@@ -396,7 +398,7 @@
                         </div>
                         <div class="container-card-link-github">
                             <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
-                                target="_blank">View
+                                target="_blank" rel="noopener">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
@@ -423,7 +425,7 @@
                         </div>
                         <div class="container-card-link-github">
                             <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
-                                target="_blank">View
+                                target="_blank" rel="noopener">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
@@ -451,7 +453,7 @@
                         </div>
                         <div class="container-card-link-github">
                             <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
-                                target="_blank">View
+                                target="_blank" rel="noopener">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
@@ -481,7 +483,7 @@
                         </div>
                         <div class="container-card-link-github">
                             <a href="https://github.com/steharr" class="btn btn-steharr-standard card-link-github"
-                                target="_blank">View
+                                target="_blank" rel="noopener">View
                                 on
                                 Github <i class="fab fa-github"></i></a>
                         </div>
@@ -509,7 +511,8 @@
                 <div class="col-md-4 contact-info-box">
                     <div>
                         <h5>Want to know more?</h5>
-                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">Download
+                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank"
+                            rel="noopener">Download
                             My CV
                             <i class="fas fa-arrow-alt-circle-down"></i>
                         </a>
@@ -575,10 +578,12 @@
                         Social
                     </h4>
                     <p>
-                        <a href="https://www.linkedin.com/in/stephen-harrold-338235173/" target="_blank"><i
-                                class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/steharr" target="_blank"><i class="fab fa-github-square"></i></a>
-                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                        <a href="https://www.linkedin.com/in/stephen-harrold-338235173/" target="_blank"
+                            rel="noopener"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/steharr" target="_blank" rel="noopener"><i
+                                class="fab fa-github-square"></i></a>
+                        <a href="https://twitter.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-twitter-square"></i></a>
                     </p>
                 </div>
             </div>
