--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
     <!-- Header -->
     <header>
+        <!-- Site Nav Bar built using Boostrap Component: https://getbootstrap.com/docs/4.6/components/navbar/ -->
         <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
             <a class="navbar-brand" href="#landing">SteHarr</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -240,7 +241,7 @@
             <div class="row">
                 <div class="col-md-8 skills-box-container">
                     <h3 class="skills-box-header">Coding Languages</h3>
-                    <!-- coding languages progress bars (adapted from bootstrap progress bars) -->
+                    <!-- Progress bars adapted from Boostrap Component: https://getbootstrap.com/docs/4.6/components/progress/ -->
                     <div class="row coding-languages-item">
                         <div class="col-4 language-type">HTML</div>
                         <div class="col-8 progress coding-languages-progress-bar">
@@ -356,6 +357,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-6 col-lg-4">
+                    <!-- Project cards were adapted from Boostrap Component: https://getbootstrap.com/docs/4.6/components/card/ -->
                     <!-- ******Project Card Start****** -->
                     <div class="card project-card">
                         <div class="project-card-image">
