updated landing page text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="landing-hero-blurb-text">
                         <h2 class="typing-demo">Hi! My name is ...</h2>
                         <h1 class="typing-demo">Stephen Harrold</h1>
-                        <p>Junior Full Stack Developer based in Dublin. I am a creative problem
+                        <p>Full Stack Developer based in Dublin. I am a creative problem
                             solver with a
                             talent for making applications. I hope you enjoy browsing my site.
                             <i class="far fa-smile"></i>
